Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,18 @@
     <title>Mini's blog</title>
 </head>
 <body>
-    <p>Hi There!</p>
-    <p>It works!</p>
+    <div><p>Hi There!</p>
+    <p>It works!</p></div>
+
+
+    {% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+
+
 </body>
 </html>
